[package]
name = "deno_runner"
version = "0.1.0"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deno_core = "0.365"
deno_web = "0.252"
deno_webidl = "0.221"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
